# xsdtojson

./: README.md  pyproject.toml
tests/: test_jsonschema.py
xsdtojson/: utils.py  xsd_parser.py
